5.1.1 -> 5.1.2:
    - jbj: add --enable-build-gcov for CFLAGS -fprofile-arcs -ftest-coverage.
    - jbj: hot-wire a top level "make check". noisy sanity check atm, todo++.
    - jbj: backport top level tests/* for "make check". No tests in Makefile
	SUBDIRS targets yet ...
    - jbj: rpmrepo: add doxygen markup throughout, adjust splint annotations.
    - jbj: update i18n from Translation Project.
    - jbj: update po/POTFILES.in
    - jbj: rpmuuid: add i18n to error messages.
    - jbj: fix: rpm-python h['filenames'] needs tagName(0x54aafb71) to
	return "Filenames" in order to find the filepathsTag extension.
    - jbj: add a missing newline to a debug message.
    - jbj: revert rpmtsOpenDB on --checksig path, rely on the lazy open
    	in rpmtsFindPubkey instead.
    - jbj: fix: rpm -qp returns NOKEY because rpmdb is not yet open. Do a lazy
    	open in rpmtsFindPubkey.
    - jbj: python: fix: insure that ts.setProbFilter() return is initialized.
    - jbj: fix: --triggers segfault, don't depend on he->p.ptr = NULL after
	headerGet() failed return.
    - jbj: add RPMTAG_PACKAGESTAT, and store persistently in a rpmdb Header.
    - jbj: disable loop unraveling error msgs for now. better needs to be done.
    - jbj: rpmrepo: achieve {primary,filelists,other}.xml spew parity w createrepo.
    - jbj: rpmrepo: compute origin *.rpm file digest while reading.
    - jbj: preserve stat(2) & digest through headerReload().
    - jbj: get rid of copy-n-paste typos, add "l" type markers to rpmtag.h.
    - jbj: add RPMTAG_PACKAGEDIGEST extension as RPM_STRING_TYPE.
    - jbj: add digest of origin *.rpm to Header internal store.
    - jbj: add RPMTAG_PACKAGESIZE extension as RPM_UINT64_TYPE.
    - jbj: rework RPMTAG_PACKAGETIME extension as RPM_UINT64_TYPE.
    - jbj: rework header{Get,Set}Time as header{Get,Stat}Statbuf methods.
    - jbj: add stat(2) of origin *.rpm to Header internal store.
    - jbj: permit file digests through (e.g.) :stat format extension.